# flask-3vps

./: Dockerfile  app.py  docker-compose.yml  main.py  old_messsage.html  pyproject.toml
static/css/: styles.css
static/js/: upload.js
templates/: index.html
