[tool.poetry]
name = "flask-3vps"
version = "0.1.0"
description = ""
authors = ["C-Hurtmann <constantine2903@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-wtf = "^1.1.1"
boto3 = "^1.28.36"
flask-sqlalchemy = "^3.0.5"
requests = "^2.31.0"
redis = "^5.0.0"
celery = "^5.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
